tests/rustdoc-ui/const_arg_in_type_position.stderr
error[E0747]: constant provided when a type was expected
  --> $DIR/const_arg_in_type_position.rs:3:35
   |
LL | fn foo<const N: usize>() -> Array<N, ()> {
   |                                   ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0747`.
